--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
             <i class="fab fa-twitter" onclick="location.href='https://twitter.com/MohitSh19265822'"></i>
             <i class="fab fa-instagram" onclick="location.href='https://www.instagram.com/rajivchowk_metrostation/?hl=en'"></i>
         </div>
-        <button onclick="location.href='mohitresume.pdf'" class="downloadbtn">Download CV</button>
+        <button onclick="location.href='Mohit Sharma resume 2024.pdf'" class="downloadbtn">Download CV</button>
         <button class="contactbtn" onclick="location.href='https://wa.link/4lvci6'">Contact Me</button>
     </div>
-    <div class="image-box">
-        <img src="image.png" draggable="false" alt="Mohit Sharma's Picture">
-    </div>
+
+
     <script src="https://unpkg.com/typed.js@2.1.0"></script>
     <script src="javascript.js"></script>
 </body>
